# TinyQuant

./: .gitattributes  .gitignore  .markdownlint-cli2.jsonc  .obsidian-linter.jsonc  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  COMPATIBILITY.md  CONCEPTS.md  README.md  calibration_x86_summary.txt  pyproject.toml  run_calibration_x86.sh
experiments/rust-python-performance-comparison/rust_runner/: Cargo.toml  README.md
experiments/rust-python-performance-comparison/rust_runner/src/: main.rs
rust/: .dockerignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  audit.toml  rust-toolchain.toml
rust/.cargo/: config.toml
rust/crates/: AGENTS.md  README.md
rust/crates/tinyquant-bench/: AGENTS.md  Cargo.toml  README.md
rust/crates/tinyquant-bench/baselines/: calibration-results.json  calibration-schema.json  main.json  schema.json  simd_kernels.json
rust/crates/tinyquant-bench/benches/: AGENTS.md  README.md  batch_parallel.rs  compress.rs  simd_kernels.rs  smoke.rs
rust/crates/tinyquant-bench/fixtures/calibration/: manifest.json
rust/crates/tinyquant-bench/src/: AGENTS.md  CLAUDE.md  README.md  lib.rs
rust/crates/tinyquant-bench/src/calibration/: AGENTS.md  README.md  mod.rs  neighbor_recall.rs  pearson.rs
rust/crates/tinyquant-bench/tests/: AGENTS.md  README.md  calibration.rs  smoke.rs
rust/crates/tinyquant-bruteforce/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
rust/crates/tinyquant-bruteforce/src/: AGENTS.md  README.md  backend.rs  errors.rs  lib.rs  similarity.rs  similarity_simd.rs  store.rs
rust/crates/tinyquant-bruteforce/tests/: AGENTS.md  README.md  backend.rs  smoke.rs
rust/crates/tinyquant-bruteforce/tests/fixtures/: brute_force_golden.json
rust/crates/tinyquant-cli/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  build.rs
rust/crates/tinyquant-cli/scripts/: AGENTS.md  README.md  cli-smoke.ps1  cli-smoke.sh
rust/crates/tinyquant-cli/src/: AGENTS.md  README.md  io.rs  main.rs  progress.rs
rust/crates/tinyquant-cli/src/commands/: AGENTS.md  README.md  codebook_io.rs  codec.rs  codec_compress.rs  codec_decompress.rs  codec_train.rs  corpus.rs  corpus_ingest.rs  corpus_search.rs  info.rs  mod.rs  verify.rs
rust/crates/tinyquant-cli/tests/: AGENTS.md  README.md  cli_smoke.rs  smoke.rs
rust/crates/tinyquant-core/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
rust/crates/tinyquant-core/examples/: AGENTS.md  README.md  dump_codec_fixture.rs  dump_rotation_fixture.rs
rust/crates/tinyquant-core/src/: AGENTS.md  README.md  errors.rs  lib.rs  prelude.rs  types.rs
rust/crates/tinyquant-core/src/backend/: AGENTS.md  README.md  mod.rs  protocol.rs
rust/crates/tinyquant-core/src/codec/: AGENTS.md  README.md  batch.rs  batch_error.rs  codebook.rs  codec_config.rs  compressed_vector.rs  mod.rs  (+10 more)
rust/crates/tinyquant-core/tests/: AGENTS.md  README.md  backend_trait.rs  batch_determinism.rs  batch_parallel.rs  codebook.rs  codec_config.rs  codec_fixture_parity.rs  codec_service.rs  compressed_vector.rs  compression_policy.rs  corpus_aggregate.rs  corpus_events.rs  corpus_insertion_order.rs  entry_meta_value.rs  errors.rs  gpu_feature_gate.rs  prepared_codec.rs  quantize.rs  residual.rs  rotation_cache.rs  rotation_fixture_parity.rs  rotation_matrix.rs  simd_dispatch_cache.rs  simd_parity_all_dispatch.rs  simd_parity_avx2.rs  simd_parity_neon.rs  simd_parity_scalar.rs  simd_parity_under_every_dispatch.rs  smoke.rs  types.rs  vector_entry.rs
rust/crates/tinyquant-fuzz/: AGENTS.md  Cargo.toml  README.md
rust/crates/tinyquant-fuzz/src/: AGENTS.md  README.md  lib.rs
rust/crates/tinyquant-fuzz/tests/: AGENTS.md  README.md  smoke.rs
rust/crates/tinyquant-gpu-wgpu/: AGENTS.md  Cargo.toml  README.md
rust/crates/tinyquant-gpu-wgpu/benches/: throughput_search.rs
rust/crates/tinyquant-gpu-wgpu/shaders/: cosine_topk.wgsl  dequantize.wgsl  quantize.wgsl  residual_decode.wgsl  residual_encode.wgsl  rotate.wgsl
rust/crates/tinyquant-gpu-wgpu/src/: backend.rs  backend_gpu_impl.rs  backend_preference.rs  context.rs  error.rs  lib.rs  prepared.rs
rust/crates/tinyquant-gpu-wgpu/tests/: batch_threshold.rs  context_probe.rs  error_conversion.rs  parity_compress.rs  parity_search.rs
rust/crates/tinyquant-io/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
rust/crates/tinyquant-io/examples/: AGENTS.md  README.md  gen_corpus_fixture.rs
rust/crates/tinyquant-io/src/: AGENTS.md  README.md  errors.rs  lib.rs  parallelism.rs
rust/crates/tinyquant-io/tests/: AGENTS.md  README.md  bit_pack_exhaustive.rs  codec_file_proptest.rs  header_size_audit.rs  mmap_corpus.rs  python_parity.rs  rejection.rs  roundtrip.rs  smoke.rs  zero_copy.rs
rust/crates/tinyquant-js/: AGENTS.md  Cargo.toml  README.md  build.rs  package.json
rust/crates/tinyquant-js/src/: AGENTS.md  README.md  backend.rs  buffers.rs  codec.rs  corpus.rs  errors.rs  lib.rs
rust/crates/tinyquant-pgvector/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
rust/crates/tinyquant-pgvector/src/: AGENTS.md  README.md  adapter.rs  errors.rs  lib.rs  sql.rs  wire.rs
rust/crates/tinyquant-pgvector/tests/: AGENTS.md  README.md  adapter.rs  smoke.rs
rust/crates/tinyquant-py/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  pyproject.toml
rust/crates/tinyquant-py/src/: AGENTS.md  README.md  backend.rs  codec.rs  corpus.rs  errors.rs  lib.rs  numpy_bridge.rs
rust/crates/tinyquant-sys/: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  build.rs  cbindgen.toml
rust/crates/tinyquant-sys/include/: AGENTS.md  README.md  tinyquant.h
rust/crates/tinyquant-sys/src/: AGENTS.md  README.md  codec_abi.rs  corpus_abi.rs  error.rs  handle.rs  internal.rs  lib.rs
rust/crates/tinyquant-sys/tests/: AGENTS.md  README.md  abi_c_smoke.rs  abi_cxx_smoke.rs  abi_handle_lifetime.rs  abi_header_compile.rs  abi_panic_crossing.rs  abi_smoke.rs  c_abi_roundtrip.rs
rust/xtask/: AGENTS.md  Cargo.toml  README.md
rust/xtask/src/: AGENTS.md  README.md  main.rs
rust/xtask/src/cmd/: AGENTS.md  README.md  bench.rs  calibration.rs  guard_sync.rs  guard_sync_python.rs  matrix_sync.rs  simd.rs
(+500 files in other folders)
