[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tinyquant-cpu"
version = "0.1.1"
description = "CPU-only vector quantization codec for embedding storage compression"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.26",
]

[project.urls]
Homepage = "https://github.com/better-with-models/TinyQuant"
Repository = "https://github.com/better-with-models/TinyQuant"
Issues = "https://github.com/better-with-models/TinyQuant/issues"
Changelog = "https://github.com/better-with-models/TinyQuant/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "mypy>=1.10",
    "ruff>=0.5",
    "twine>=5.0",
    "build>=1.0",
]
pgvector = [
    "psycopg[binary]>=3.1",
]
pgvector-test = [
    "psycopg[binary]>=3.1",
    "testcontainers[postgres]>=4.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88
extend-exclude = ["scripts"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "C901", "S", "SIM",
          "TCH", "ANN", "D", "RUF"]

[tool.ruff.lint.mccabe]
max-complexity = 7

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "TCH", "ANN401", "S608"]
# The sentence corpus is inherently long-form; line-wrap would mangle it.
"experiments/quantization-benchmark/generate_embeddings.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unreachable = true
no_implicit_reexport = true

[[tool.mypy.overrides]]
module = "psycopg.*"
ignore_missing_imports = true

# matplotlib is only used by experiments/quantization-benchmark/generate_plots.py
# and is intentionally not pinned as a core dev dep — so allow mypy to proceed
# without type stubs when it isn't installed.
[[tool.mypy.overrides]]
module = "matplotlib.*"
ignore_missing_imports = true

# Explicitly tell hatchling there are no package sources.
# Without this, hatchling tries to auto-detect a package under src/
# and fails the build entirely — which is actually the desired
# failure mode for Phase 23, because nothing should be built from
# this tree until Phase 24 introduces the Rust backend.
[tool.hatch.build.targets.wheel]
packages = []
bypass-selection = true

# Keep sdists buildable for local archival, but exclude the reference.
[tool.hatch.build.targets.sdist]
exclude = [
    "tests/reference/",
    "tests/parity/",
    "rust/",
    "experiments/",
    "scripts/",
    "docs/",
]

[tool.coverage.run]
parallel = true
source = ["tinyquant_py_reference"]
omit = [
    "tests/reference/tinyquant_py_reference/tools/*",
]

[tool.coverage.paths]
source = [
    "tests/reference/tinyquant_py_reference",
    "*/tests/reference/tinyquant_py_reference",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# pythonpath is how pytest adds tests/reference to sys.path at
# collection time. --import-mode=importlib is preserved so that
# tests/parity and tests/reference do not share a module cache.
pythonpath = ["tests/reference"]
addopts = "--import-mode=importlib -x --tb=short"
markers = [
    "pgvector: requires PostgreSQL with pgvector (PGVECTOR_TEST_DSN)",
    "parity: cross-implementation parity between Python reference and Rust",
]
