[workspace]
resolver = "2"
members = [
    "crates/tinyquant-core",
    "crates/tinyquant-io",
    "crates/tinyquant-bruteforce",
    "crates/tinyquant-pgvector",
    "crates/tinyquant-sys",
    "crates/tinyquant-py",
    "crates/tinyquant-cli",
    "crates/tinyquant-bench",
    "crates/tinyquant-fuzz",
    "xtask",
]

[workspace.package]
version      = "0.1.0"
edition      = "2021"
rust-version = "1.78"
license      = "Apache-2.0"
repository   = "https://github.com/better-with-models/TinyQuant"
authors      = ["TinyQuant Contributors"]

[workspace.dependencies]
# Path deps — sibling crates
tinyquant-core       = { path = "crates/tinyquant-core" }
tinyquant-io         = { path = "crates/tinyquant-io" }
tinyquant-bruteforce = { path = "crates/tinyquant-bruteforce" }

# no_std-compatible (added to individual crates as needed in later phases)
half        = { version = "2.4",  default-features = false, features = ["bytemuck"] }
bytemuck    = { version = "1",    default-features = false, features = ["derive"] }
sha2        = { version = "0.10", default-features = false }
hex         = { version = "0.4",  default-features = false }
faer        = { version = "0.19", default-features = false }
rand        = { version = "0.8",  default-features = false }
rand_chacha = { version = "0.3",  default-features = false }

# std-only (used by io, bruteforce, sys, py, cli, bench)
thiserror = "1"
memmap2   = "0.9"
rayon     = "1"
pyo3      = { version = "0.21", features = ["extension-module"] }
numpy     = "0.21"
criterion = { version = "0.5",  features = ["html_reports"] }

[profile.release]
lto           = "fat"
codegen-units = 1
panic         = "abort"
strip         = true
debug         = 0
