[workspace]
resolver = "2"
members = [
    "crates/tinyquant-core",
    "crates/tinyquant-io",
    "crates/tinyquant-bruteforce",
    "crates/tinyquant-pgvector",
    "crates/tinyquant-sys",
    "crates/tinyquant-py",
    "crates/tinyquant-cli",
    "crates/tinyquant-bench",
    "crates/tinyquant-fuzz",
    "xtask",
]

[workspace.package]
version      = "0.1.0"
edition      = "2021"
rust-version = "1.81"
license      = "Apache-2.0"
repository   = "https://github.com/better-with-models/TinyQuant"
authors      = ["TinyQuant Contributors"]

[workspace.dependencies]
# Path deps — sibling crates.
# Phase 22.D: version pins added so `cargo publish` accepts the manifest.
# Crates are published upstream-first (core → io → bruteforce → pgvector →
# sys → cli); the `path` is retained for intra-workspace development but
# cargo strips it from the published manifest and consumers resolve through
# crates.io at the pinned version. See
# [[design/rust/crate-topology]] §Publish order.
tinyquant-core       = { path = "crates/tinyquant-core",       version = "=0.1.0" }
tinyquant-io         = { path = "crates/tinyquant-io",         version = "=0.1.0" }
tinyquant-bruteforce = { path = "crates/tinyquant-bruteforce", version = "=0.1.0" }

# no_std-compatible (added to individual crates as needed in later phases)
half        = { version = "2.4",  default-features = false, features = ["bytemuck"] }
bytemuck    = { version = "1",    default-features = false, features = ["derive"] }
sha2        = { version = "0.10", default-features = false }
hex         = { version = "0.4",  default-features = false, features = ["alloc"] }
faer        = { version = "0.19", default-features = false }
rand        = { version = "0.8",  default-features = false }
rand_chacha = { version = "0.3",  default-features = false }
spin        = { version = "0.9",  default-features = false, features = ["mutex", "spin_mutex"] }
libm        = { version = "0.2",  default-features = false }

# std-only (used by io, bruteforce, sys, py, cli, bench)
thiserror  = { version = "2", default-features = false }
memmap2    = "0.9"
rayon      = "1"
pyo3       = { version = "0.22", features = ["extension-module"] }
numpy      = "0.22"
criterion  = { version = "0.5",  features = ["html_reports"] }
serde_json = { version = "1" }
# indexmap 2.3+ requires hashbrown 0.17 which requires edition2024 (Rust > 1.81).
# Pin to 2.2.6 to stay within the workspace MSRV of 1.81.
indexmap   = { version = "=2.2.6" }
once_cell  = { version = "1" }
regex      = { version = "1" }
# postgres 0.19 transitively requires getrandom 0.4 (edition2024, Rust > 1.81).
# The dependency is declared optional in tinyquant-pgvector and only activated
# via the live-db / test-containers feature flags, never in default builds.
postgres   = { version = "0.19" }

[profile.release]
lto           = "fat"
codegen-units = 1
panic         = "abort"
strip         = true
debug         = 0
