[package]
name    = "tinyquant-bench"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
publish = false

[[bench]]
name    = "smoke"
harness = false

[dev-dependencies]
criterion      = { workspace = true }
tinyquant-core = { workspace = true }
tinyquant-io   = { workspace = true }

[dependencies]
tinyquant-core = { workspace = true }
tinyquant-io   = { workspace = true }
