[package]
name    = "tinyquant-bench"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
publish = false

[features]
default = []
# Phase 20: compile the `simd_kernels` benchmark against the dispatch-
# routed `tinyquant-core/simd` and `tinyquant-bruteforce/simd` paths.
simd    = ["tinyquant-core/simd", "tinyquant-bruteforce/simd"]

[[bench]]
name    = "smoke"
harness = false

[[bench]]
name              = "simd_kernels"
harness           = false
required-features = ["simd"]

[[bench]]
name    = "batch_parallel"
harness = false

[[bench]]
name    = "compress"
harness = false

[dependencies]
# Phase 21: calibration fixture SHA-256 verification
sha2       = { workspace = true }
hex        = { workspace = true }
serde_json = { workspace = true }
# Phase 21: calibration module shared between lib + tests + benches
tinyquant-core = { workspace = true }

[dev-dependencies]
criterion            = { workspace = true }
tinyquant-io         = { workspace = true }
tinyquant-bruteforce = { workspace = true }
rayon                = { workspace = true }
rand_chacha          = { workspace = true }
