[package]
name         = "tinyquant-bruteforce"
description  = "Brute-force search backend for TinyQuant."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true

[dependencies]
tinyquant-core = { workspace = true }
indexmap       = { workspace = true }

[dev-dependencies]
serde_json  = { workspace = true }
rand_chacha = { workspace = true }
rand        = { workspace = true }

[features]
default = []
simd    = []
dashmap = []
std     = []
