[package]
name         = "tinyquant-core"
description  = "CPU-only vector quantization codec — core types, codec, corpus, and backend trait (no_std)."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true

[features]
default = []
std     = []
simd    = ["std"]

[dependencies]
# Phase 12: error enums (no_std-capable via thiserror v2 + default-features = false)
thiserror = { workspace = true }
