[package]
name         = "tinyquant-core"
description  = "CPU-only vector quantization codec — core types, codec, corpus, and backend trait (no_std)."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true

[features]
default = []
std     = []
simd    = ["std"]

[dependencies]
# Phase 12: error enums (no_std-capable via thiserror v2 + default-features = false)
thiserror = { workspace = true }
# Phase 13: codec / rotation / cache
faer        = { workspace = true }
rand_chacha = { workspace = true }
sha2        = { workspace = true }
hex         = { workspace = true }
spin        = { workspace = true }
libm        = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
# Phase 14: codebook / quantize fixture parity tests
bytemuck   = { workspace = true }

[[example]]
name              = "dump_rotation_fixture"
path              = "examples/dump_rotation_fixture.rs"
required-features = ["std"]
