[package]
name    = "tinyquant-fuzz"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
publish = false

[dependencies]
tinyquant-core = { workspace = true }
# libfuzzer-sys wired in the phase that implements fuzz targets
