[package]
name              = "tinyquant-gpu-wgpu"
version.workspace   = true
edition.workspace   = true
rust-version      = "1.87"
license.workspace   = true
repository.workspace = true
description       = "wgpu/WGSL GPU-accelerated batch compression backend for TinyQuant (optional dependency — prefer `tinyquant-core` with the `gpu-wgpu` feature)"
keywords          = ["quantization", "embeddings", "wgpu", "gpu", "machine-learning"]
categories        = ["compression", "science", "wasm"]

[dependencies]
tinyquant-core = { workspace = true }
wgpu           = { version = "22", features = ["wgsl"] }
tokio          = { version = "1", features = ["rt"] }
thiserror      = { workspace = true }
bytemuck       = { workspace = true }

[dev-dependencies]
tokio              = { version = "1", features = ["rt", "macros"] }
naga               = { version = "22.1.0", features = ["wgsl-in"] }
tinyquant-bruteforce = { workspace = true }
criterion          = { version = "0.5", features = ["html_reports"] }

[[bench]]
name    = "throughput_search"
harness = false
