[package]
name         = "tinyquant-io"
description  = "Serialization, mmap, and file I/O for TinyQuant."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true

[dependencies]
tinyquant-core = { workspace = true }
thiserror      = { workspace = true }
memmap2        = { workspace = true, optional = true }
dhat           = { version = "=0.3.2", optional = true }
rayon          = { workspace = true, optional = true }

[dev-dependencies]
rand_chacha = { workspace = true }
serde_json  = { workspace = true }
tempfile    = "=3.14.0"

[features]
default   = ["simd"]
simd      = ["tinyquant-core/simd"]
mmap      = ["dep:memmap2"]
mmap-lock = []
dhat-heap = ["dep:dhat"]
rayon     = ["dep:rayon"]
