[package]
name         = "tinyquant-py"
description  = "pyo3 Python bindings for TinyQuant (importable as `tinyquant_rs`)."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true

[lib]
name       = "tinyquant_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3                 = { workspace = true, features = ["abi3-py312"] }
numpy                = { workspace = true }
tinyquant-core       = { workspace = true, features = ["std"] }
tinyquant-io         = { workspace = true }
tinyquant-bruteforce = { workspace = true }

[features]
default = ["simd"]
simd    = ["tinyquant-core/simd", "tinyquant-io/simd", "tinyquant-bruteforce/simd"]
# Enables GPU-accelerated batch compression in the Python wheel.
# Wheel logistics (separate wheel artifact, PyPI extras) are deferred to Phase 29.
gpu-wgpu = ["tinyquant-core/gpu-wgpu"]
